--- a/majoroca.html
+++ b/majoroca.html
@@ -2,9 +2,13 @@
 <html lang="en">
     <head>
 <!--         Add all required tags in the head here - meta tags for SEO, responsiveness, and with info about the page, etc., in addition to tags to create a card on Twitter with a large image and open graph tags to allow for sharing on other social media sites -->
-    
+    <meta charset="UTF-8">
+    <meta description="author" content="Yen Nguyen">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Exploring vacation options">
+    <meta name="keyword" content="Majorca, Tenerife, Granada, Ibiza, Madrid, Seville, Valencia, Wunderlust, Vacation, Travel, Traveling, Dreams">
+    <meta name="robots" content="index, follow">
     <title>Wunderlust Assignment</title>
-
     </head>
     <body>
 <!--         Reveiew the document and add the proper tags to all of the headings  throughout. Use the outline feature in the validator to ensure that these have been added correctly. See the image of the correct outline as a reference if you have questions 
