--- a/majoroca.html
+++ b/majoroca.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Exploring vacation options">
     <meta name="keyword" content="Majorca, Tenerife, Granada, Ibiza, Madrid, Seville, Valencia, Wunderlust, Vacation, Travel, Traveling, Dreams">
     <meta name="robots" content="index, follow">
+
+
     <title>Wunderlust Assignment</title>
     </head>
     <body>
@@ -33,7 +35,7 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                 <h2>Majorca</h2>
                 <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
                 <img src="images/majorca-waves.png" alt="Turquoise blue waters with white wave caps crashing against a rock cliff">
-                <img src="images/majorca-beach.png" alt="beach">
+                <img src="images/majorca-beach.png" alt="Sunny beach surrounded by cliffs with plants where the water meets the soft yellow sand">
                 <img src="images/majorca-cove.png" alt="Deep blue water leading to the horizon with the island and trees in the foreground">
                 <section>
                     <h3>Plan Your Trip</h3>
@@ -75,14 +77,14 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                         <q>I traveled here for business, but my stay was extended. Now it is my home.</q>
                     </section>
                     <section>
-                        <img src="images/max-winter.png" alt="Max Winter">
+                        <img src="images/max-winter.png" alt="Max Winter is a gentleman wearing a brown button up with light brown hair">
                         <h4>Max Winter</h4>
                         <p>Traveling From: Berlin, Germany</p>
                         <q>Great escape from my reality. Beautiful sunsets, wonderful people, great beer.</q>
                     </section>
                     <section>
-                        <img src="images/ines-villegoes.png" alt="lady person">
-                        <h4>Inés Villegos</h4>
+                        <img src="images/ines-villegoes.png" alt="Ines Villegoes is a lady with a police uniform on with long curly brown hair">
+                        <h4>Inés Villegoes</h4>
                         <p>Traveling From: Barcelona, Spain</p>
                         <q>A very safe environment for all travelers.</q>
                     </section>
