--- a/majoroca.html
+++ b/majoroca.html
@@ -9,7 +9,10 @@
     <meta name="keyword" content="Majorca, Tenerife, Granada, Ibiza, Madrid, Seville, Valencia, Wunderlust, Vacation, Travel, Traveling, Dreams">
     <meta name="robots" content="index, follow">
 
-
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Wunderlust">
+    <meta name="twitter:description" content="Exploring vacation options">
+    <meta name="twitter:image" content="images/majorca-waves.png">
     <title>Wunderlust Assignment</title>
     </head>
     <body>
