meta for scoial
open graph

--- a/majoroca.html
+++ b/majoroca.html
@@ -13,6 +13,14 @@
     <meta name="twitter:title" content="Wunderlust">
     <meta name="twitter:description" content="Exploring vacation options">
     <meta name="twitter:image" content="images/majorca-waves.png">
+    <meta name="twitter:site" content="@wunderlust">
+
+    <meta property="og:title" content="Wunderlust">
+    <meta property="og:description" content="Exploring vacation options">
+    <meta property="og:image" content="images/majorca-waves.png">
+    <meta property="og:url" content="wunderlust.com">
+    <meta property="og:type" content="website">
+
     <title>Wunderlust Assignment</title>
     </head>
     <body>
