--- a/majoroca.html
+++ b/majoroca.html
@@ -3,7 +3,7 @@
     <head>
 <!--         Add all required tags in the head here - meta tags for SEO, responsiveness, and with info about the page, etc., in addition to tags to create a card on Twitter with a large image and open graph tags to allow for sharing on other social media sites -->
     <meta charset="UTF-8">
-    <meta description="author" content="Yen Nguyen">
+    <meta name="author" content="Yen Nguyen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Exploring vacation options">
     <meta name="keyword" content="Majorca, Tenerife, Granada, Ibiza, Madrid, Seville, Valencia, Wunderlust, Vacation, Travel, Traveling, Dreams">
